<resources>
    <string name="activate_filter">Filtern</string>
    <string name="cancel">Abbruch</string>
    <string name="creds">Zugangsdaten</string>
    <string name="download_finished">Herunterladen beendet</string>
    <string name="downloading">Herunterladen…</string>
    <string name="filter_enabled">Filter aktiv - Klicken für Details</string>
    <string name="filter_title">Klassen/Kurse im Filter</string>
    <string name="grade">Klasse</string>
    <string name="k10">10. Klasse</string>
    <string name="k5">5. Klasse</string>
    <string name="k6">6. Klasse</string>
    <string name="k7">7. Klasse</string>
    <string name="k8">8. Klasse</string>
    <string name="k9">9. Klasse</string>
    <string name="last_update">Letztes Update:</string>
    <string name="lesson">Stunde</string>
    <string name="mittelstufe">Mittelstufe</string>
    <string name="no_creds">Keine Zugangsdaten gespeichert</string>
    <string name="no_creds_detailed">Es wurden noch keine Zugangsdaten gespeichert, willst du das jetzt tun?</string>
    <string name="no_data">Keine Daten verfügbar, klicken zum aktualisieren</string>
    <string name="no_data_today">Keine Vertretungen</string>
    <string name="no_lesson">nicht verfügbar</string>
    <string name="no_status">kein Status verfügbar</string>
    <string name="oberstufe">Oberstufe</string>
    <string name="ok">OK</string>
    <string name="open_browser">Im Browser öffnen</string>
    <string name="parsing_finished">Datenverarbeitung beendet</string>
    <string name="published">Stand:</string>
    <string name="pwd">Passwort</string>
    <string name="refresh">Aktualisieren</string>
    <string name="settings">Einstellungen</string>
    <string name="status">Status</string>
    <string name="still_parsing">Aktion nicht möglich! Daten werden noch verarbeitet!</string>
    <string name="uname">Benutzername</string>
    <string name="unterstufe">Unterstufe</string>
    <string name="updating">Wird aktualisiert</string>
    <string name="curr_filter">Momentan gefilterte Klassen</string>
    <string name="no_filter">Klasse hinzufügen…</string>
    <string name="drawer_closed">Navigationsleiste geschlossen</string>
    <string name="drawer_open">Navigationsleiste geöffnet</string>
    <string name="news">News</string>
    <string name="tests">Tests</string>
    <string name="vplan">Vertretungsplan</string>
    <string name="msg_hidden_plural">Einträge wegen Filterung verborgen</string>
    <string name="msg_hidden_singular">Eintrag wegen Filterung verborgen</string>
    <string name="download_error">Bitte überprüfe die gespeicherten Zugangsdaten und deine Internetverbindung</string>
    <string name="download_error_title">Herunterladen gescheitert</string>
    <string name="download_error_nocreds">Für Unter- und Mittelstufe sind Benutzername und Passwort benötigt. Jetzt eingeben?</string>
    <string name="download_error_nointernet">Bitte die Internetverbindung überprüfen</string>
    <string name="hidden_items">Verborgene Einträge</string>
    <string name="bg_updates">Hintergrundaktualisierung</string>
    <string name="activate_bg_updates">Automatisch aktualisieren</string>
    <string name="preparing">Vorbereiten...</string>
    <string name="update_int">Intervall</string>
    <string name="msg_bg_update">Aktualisiere Daten</string>
    <string name="files">Dateien</string>
    <string name="downloaded_prog">heruntergeladen...</string>
    <string name="retry">Erneut versuchen</string>
    <string name="file">Datei</string>
    <string name="levels">Stufen</string>
    <string name="level">Stufe</string>
    <string name="date">Datum</string>
    <string name="subject">Fach</string>
    <string name="substitutions">Vertretungen</string>
    <string name="exams">Prüfungen</string>
    <string name="appmodes_header">Ansichten</string>
    <string name="title_activity_exams">Prüfungen</string>
    <string name="exam">Schulaufgabe</string>
    <string name="type">Art</string>
    <string name="standard_test_abbrev">SA</string>
    <string name="nothing_to_download">Herunterladen nicht möglich</string>
    <string name="nothing_to_download_msg">In deinem Filter befinden sich noch keine Klassen, weshalb keine Prüfungs-Daten heruntergeladen werden können.\nJetzt Klassen zum Filter hinzufügen?</string>
    <string name="exams_activity_subtitle">(Klassen im Filter)</string>
    <string name="hide_past_exams">Alte Prüfungen ausblenden</string>
    <string name="hidden_exams_info">Alte Einträge ausgeblendet</string>
    <string name="all_grades" translatable="false">all grades</string>
    <string name="app_name" translatable="false">SGP</string>
    <string name="bigb" translatable="false">Bigband</string>
    <string name="bio" translatable="false">Biologie</string>
    <string name="button_filter_unterstufe_key" translatable="false">button_filter_unterstufe_key</string>
    <string name="chem" translatable="false">Chemie</string>
    <string name="cho" translatable="false">Chor</string>
    <string name="deutsch" translatable="false">Deutsch</string>
    <string name="englisch" translatable="false">Englisch</string>
    <string name="franz" translatable="false">Französisch</string>
    <string name="geo" translatable="false">Geographie</string>
    <string name="gesch" translatable="false">Geschichte</string>
    <string name="inf" translatable="false">Informatik</string>
    <string name="k11" translatable="false">Q 11</string>
    <string name="k12" translatable="false">Q 12</string>
    <string name="key_deutsch_q11" translatable="false">pref_key_d_q11</string>
    <string name="key_deutsch_q12" translatable="false">pref_key_d_q12</string>
    <string name="key_grade11" translatable="false">pref_key_grade11</string>
    <string name="key_grade12" translatable="false">pref_key_grade12</string>
    <string name="key_grade5" translatable="false">pref_key_grade5</string>
    <string name="key_grade6" translatable="false">pref_key_grade6</string>
    <string name="key_grade7" translatable="false">pref_key_grade7</string>
    <string name="key_pwd" translatable="false">pref_pwd</string>
    <string name="key_uname" translatable="false">pref_uname</string>
    <string name="ku" translatable="false">Kunst</string>
    <string name="lat" translatable="false">Latein</string>
    <string name="mathe" translatable="false">Mathematik</string>
    <string name="musik" translatable="false">Musik</string>
    <string name="ph_as" translatable="false">Astrophysik</string>
    <string name="ph_b" translatable="false">Biophysik</string>
    <string name="phy" translatable="false">Physik</string>
    <string name="pref_key_bg_upd_levels" translatable="false">pref_key_bg_upd_levels</string>
    <string name="pref_key_bg_updates" translatable="false">pref_key_bg_updates</string>
    <string name="pref_key_bio_q11" translatable="false">pref_key_bio_q11</string>
    <string name="pref_key_bio_q12" translatable="false">pref_key_bio_q12</string>
    <string name="pref_key_ch_q11" translatable="false">pref_key_ch_q11</string>
    <string name="pref_key_ch_q12" translatable="false">pref_key_ch_q12</string>
    <string name="pref_key_engl_q11" translatable="false">pref_key_engl_q11</string>
    <string name="pref_key_engl_q12" translatable="false">pref_key_engl_q12</string>
    <string name="pref_key_f_q11" translatable="false">pref_key_f_q11</string>
    <string name="pref_key_f_q12" translatable="false">pref_key_f_q12</string>
    <string name="pref_key_geo_q11" translatable="false">pref_key_geo_q11</string>
    <string name="pref_key_geo_q12" translatable="false">pref_key_geo_q12</string>
    <string name="pref_key_gesch_q11" translatable="false">pref_key_gesch_q11</string>
    <string name="pref_key_gesch_q12" translatable="false">pref_key_gesch_q12</string>
    <string name="pref_key_inf_q12" translatable="false">pref_key_info_q12</string>
    <string name="pref_key_inf_q11" translatable="false">pref_key_info_q11</string>
    <string name="pref_key_ku_q11" translatable="false">pref_key_ku_q12</string>
    <string name="pref_key_ku_q12" translatable="false">key_ku_q12</string>
    <string name="pref_key_lat_q11" translatable="false">pref_key_lat_q11</string>
    <string name="pref_key_lat_q12" translatable="false">pref_key_lat_q12</string>
    <string name="pref_key_mathe_q11" translatable="false">pref_key_mathe_q11</string>
    <string name="pref_key_mathe_q12" translatable="false">pref_key_mathe_q12</string>
    <string name="pref_key_mu_q12" translatable="false">pref_key_musik_q12</string>
    <string name="pref_key_mu_q11" translatable="false">pref_key_musik_q11</string>
    <string name="pref_key_phas_q12" translatable="false">pref_key_phas_q12</string>
    <string name="pref_key_phb_q11" translatable="false">pref_key_phb_q11</string>
    <string name="pref_key_phy_q11" translatable="false">pref_key_phy_q11</string>
    <string name="pref_key_phy_q12" translatable="false">pref_key_phy_q12</string>
    <string name="pref_key_psem_q11" translatable="false">pref_key_psem_q11</string>
    <string name="pref_key_psem_q12" translatable="false">pref_key_psem_q12</string>
    <string name="pref_key_psy_q11" translatable="false">pref_key_psy_q11</string>
    <string name="pref_key_reli_q11" translatable="false">pref_key_reli_q11</string>
    <string name="pref_key_reli_q12" translatable="false">pref_key_reli_q12</string>
    <string name="pref_key_rhet_q11" translatable="false">pref_key_rhet_q11</string>
    <string name="pref_key_rhet_q12" translatable="false">pref_key_rhet_q12</string>
    <string name="pref_key_sk_q11" translatable="false">pref_key_sk_q11</string>
    <string name="pref_key_sk_q12" translatable="false">pref_key_sk_q12</string>
    <string name="pref_key_sp_add_q11" translatable="false">pref_key_sp_add_q11</string>
    <string name="pref_key_sp_add_q12" translatable="false">pref_key_sp_add_q12</string>
    <string name="pref_key_sp_q11" translatable="false">pref_key_sp_q11</string>
    <string name="pref_key_sp_q12" translatable="false">pref_key_sp_q12</string>
    <string name="pref_key_spo_q11" translatable="false">pref_key_spo_q11</string>
    <string name="pref_key_upd_int" translatable="false">pref_key_upd_int</string>
    <string name="pref_key_wr_q11" translatable="false">pref_key_wr_q11</string>
    <string name="pref_key_wr_q12" translatable="false">pref_key_wr_q12</string>
    <string name="pref_key_wsem_q11" translatable="false">pref_key_wsem_q11</string>
    <string name="pref_key_wsem_q12" translatable="false">pref_key_wsem_q12</string>
    <string name="psem" translatable="false">P-Seminar</string>
    <string name="psy" translatable="false">Psychologie</string>
    <string name="religion" translatable="false">Religion</string>
    <string name="rhet" translatable="false">Rhetorik</string>
    <string name="sk" translatable="false">Sozialkunde</string>
    <string name="sp" translatable="false">Spanisch</string>
    <string name="sp_add" translatable="false">Sport Additum</string>
    <string name="spo" translatable="false">Sport</string>
    <string name="wr" translatable="false">Wirtschaft</string>
    <string name="wsem" translatable="false">W-Seminar</string>
    <string name="timetable">Stundenplan</string>
    <string name="tutorial">Tutorial</string>
    <string name="pref_key_psy_q12" translatable="false">pref_key_psy_q12</string>
    <string name="pref_key_spo_q12" translatable="false">pref_key_spo_q12</string>
    <string name="add_exams_to_calendar">Prüfungen im Kalender speichern</string>
    <string name="miscellaneous">Sonstiges</string>
    <string name="use_dark_theme">Dunkles Design verwenden</string>
    <string name="pref_key_dark_theme" translatable="false">pref_key_dark_theme</string>
    <string name="optional_subject">Wahlfächer</string>
    <string name="pref_key_optional_subject" translatable="false">pref_key_optional_subject</string>
</resources>