<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/subheader_appmodes"
        android:title="@string/appmodes_header">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/vplan_appmode_item"
                    android:checkable="true"
                    android:icon="@drawable/ic_info_circle"
                    android:title="@string/vplan" />
                <item
                    android:id="@+id/exams_appmode_item"
                    android:checkable="true"
                    android:icon="@drawable/ic_exams"
                    android:title="@string/exams" />
                <item
                    android:id="@+id/timetable_appmode_item"
                    android:checkable="true"
                    android:icon="@drawable/ic_timetable"
                    android:title="@string/timetable" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/subheader_vplanmodes"
        android:title="@string/levels">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/unterstufe_item"
                    android:checkable="true"
                    android:title="@string/unterstufe" />
                <item
                    android:id="@+id/mittelstufe_item"
                    android:checkable="true"
                    android:title="@string/mittelstufe" />
                <item
                    android:id="@+id/oberstufe_item"
                    android:checkable="true"
                    android:title="@string/oberstufe" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item android:title="">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/lastUpdate"
                    android:title="" />
                <item
                    android:id="@+id/appInfo"
                    android:title="" />
            </group>
        </menu>
    </item>
</menu>