<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_open_browser"
        android:icon="@drawable/ic_website"
        android:title="@string/open_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_activate_filter"
        android:title="@string/hide_past_exams"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_calendar"
        android:icon="@drawable/ic_exams"
        android:title="@string/add_exams_to_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:title="@string/tutorial"
        android:icon="@drawable/ic_help"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/tester"
        android:title="test" />-->

</menu>
